# opencode-studio

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  PLUGIN_SYSTEM_IMPLEMENTATION_PLAN.md  PLUGIN_SYSTEM_IMPLEMENTATION_PLAN.zh-CN.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  renovate.json
.github/actions/setup-bun/: action.yml
.github/workflows/: backend-build-matrix.yml  ci.yml  manual-usage-e2e.yml  package.yml  release.yml  renovate.yml  tauri-wrapper-matrix.yml
desktop/: .gitignore  README.md  README.zh-CN.md
desktop/scripts/: build-frontend-only-cef.sh  build-frontend-only.sh  build-full-cef.sh  build-full.sh  prepare-sidecar.ps1  prepare-sidecar.sh
desktop/src-tauri/: Cargo.toml  src-tauri.conf.note.txt  tauri.conf.frontend.json  tauri.conf.full.json  tauri.conf.json
desktop/src-tauri-cef/: Cargo.toml  tauri.conf.full.json  tauri.conf.json
desktop/src-tauri-cef/capabilities/: default.json
desktop/src-tauri-cef/icons/: icon.icns
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  config.rs  lib.rs  main.rs  updater.rs
docs/: backend-accel-parity-review.md  backend-accel-parity-review.zh-CN.md  opencode-studio.toml.example  packaging.md  packaging.zh-CN.md  service.md  service.zh-CN.md  technical-reference.md  technical-reference.zh-CN.md
docs/i18n/: README.md
docs/i18n/ar-SA/: CONTRIBUTING.md  README.md  SECURITY.md
docs/i18n/es/: CONTRIBUTING.md  README.md  SECURITY.md
docs/i18n/fr-FR/: CONTRIBUTING.md  README.md  SECURITY.md
docs/i18n/hi-IN/: CONTRIBUTING.md  README.md  SECURITY.md
docs/i18n/pt-BR/: CONTRIBUTING.md  README.md  SECURITY.md
docs/i18n/zh-CN/: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/research/: live-preview-competitive-analysis.md  live-preview-openode-architecture.md  live-preview-plugin-bridge.md
scripts/: assert_native_target.py  build-backend-release.sh  build-frontend-dist.sh  install-service.ps1  install-service.sh  install.ps1  install.sh  service-api-smoke.ps1  service-api-smoke.sh  studio-ui-click-e2e.mjs  studio-usage-smoke.ps1  studio-usage-smoke.sh  test-macos-desktop-installer-flow.sh  test-unix-service-flow.sh  test-windows-desktop-installer-flow.ps1  test-windows-service-flow.ps1  uninstall-service.ps1  uninstall-service.sh  validate_platform_arch_mapping.py  version_sync.py
server/: Cargo.toml
server/src/: app.rs  attachment_cache.rs  chat_sidebar.rs  chat_sidebar_preferences.rs  directory_session_index.rs  directory_sessions.rs  error.rs  fs.rs  fs_watch.rs  git2_utils.rs  global_sse_hub.rs  main.rs  opencode.rs  opencode_auth.rs  opencode_proxy.rs  opencode_session.rs  path_utils.rs  persistence_paths.rs  plugin_runtime.rs  providers.rs  runtime_config.rs  session_activity.rs  settings.rs  settings_events.rs  studio_db.rs  terminal.rs  terminal_ui_state.rs  ui_auth.rs  updates.rs  workspace_preview.rs  workspace_preview_registry.rs  workspace_preview_runtime.rs
server/src/config/: mod.rs  routes.rs  sanitize.rs
server/src/config/routes/: json_io.rs  opencode.rs  settings.rs  utils.rs
server/src/config/routes/settings/: merge.rs  mod.rs  response.rs  sanitize.rs
server/src/git/: auth.rs  blame.rs  branches.rs  commit.rs  diff.rs  exec.rs  gpg.rs  history.rs  ignore.rs  lfs.rs  mod.rs  ops.rs  policy.rs  regression_tests.rs  remote.rs  repos.rs  status.rs  submodule.rs  utils.rs  worktrees.rs
server/src/git/diff/: conflicts.rs  file_diff.rs  patch.rs  stage.rs  unified.rs
server/src/git/ops/: abort.rs  continue_skip.rs  fetch.rs  gh_repo_push.rs  merge_rebase.rs  pull.rs  push.rs  stash.rs
server/src/opencode_config/: store.rs
server/src/opencode_config_model/: core.rs  mod.rs  primitives.rs
server/src/opencode_session/: consistency.rs  fallback.rs  sqlite_dao.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/scripts/: check-import-rules.mjs
web/src/: App.vue  main.ts  router.ts  style.css  sw.ts  vite-env.d.ts
web/src/app/: windowScope.ts
web/src/components/: CodeMirrorEditor.vue  ConflictEditor.vue  DiffViewer.vue  HelpDialog.vue  ImageViewerDialog.vue  Markdown.vue  McpDialog.vue  MonacoCodeEditor.vue  MonacoDiffEditor.vue  TerminalKeybar.vue  ToastHost.vue
web/src/composables/: useDesktopSidebarResize.ts  useUnifiedMultiSelect.ts
web/src/data/: chatSidebarUiPrefs.ts  directorySessionSnapshotDb.ts  (+1 more)
web/tests/: agentSelection.test.ts  chatActivityDetailsFilters.test.ts  chatReducersCompatibility.test.ts  chatSidebarAddDirectoryDialogContract.test.ts  chatSidebarDirectoryCollapseNoPlaceholderContract.test.ts  chatSidebarDirectoryListCompactSpacingContract.test.ts  chatSidebarDirectoryPagingConsistencyContract.test.ts  chatSidebarFieldContract.test.js  chatSidebarFooterCollapseNoPlaceholderContract.test.ts  chatSidebarHydrationGuardsContract.test.ts  chatSidebarPendingChildSessionSyncContract.test.ts  composerInputMenus.test.ts  composerPrimaryActionButtonsContract.test.ts  composerPrimaryActions.test.ts  composerToolbarLayout.test.ts  composerToolbarNarrowLayoutContract.test.ts  desktopBootGateContract.test.ts  deviceDetection.test.ts  directoryPathNormalization.test.ts  directorySessionPageState.test.js  directorySessionPageStateRegression.test.ts  directorySessionPagination.test.js  directorySessionPayloadConsistency.test.js  directorySessionRootTotals.test.ts  directorySessionRuntimeMerge.test.js  directorySessionSeq.test.js  directorySessionSidebarPatchFlow.test.ts  directorySessionStoreRuntimeSync.test.ts  filesDesktopOpenItemState.test.ts  filesEditorMobileSelectionContract.test.ts  filesEventSyncContract.test.ts  filesExplorerLongPressMoveContract.test.ts  filesLargeFileLoadingContract.test.ts  filesViewerVisibilityMemoryContract.test.ts  filesVisibilitySettingsContract.test.ts  gitBranchSwitcherDialogContract.test.ts  gitDiffInitialTopLineContract.test.ts  gitDiffLiveWatchContract.test.ts  gitPageContextCompose.test.js  gitPageCoreErrorBannerContract.test.ts  (+69 more)
(+392 files in other folders)
