[package]
name = "opencode-studio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.33"
json5 = "1.3.0"
indexmap = { version = "2.7.1", features = ["serde"] }
time = { version = "0.3.46", features = ["formatting"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["compression-full", "fs", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
thiserror = "2.0.18"
argon2 = "0.5.3"
base64 = "0.22.1"
bytes = "1.11.0"
reqwest = { version = "0.13.1", default-features = true, features = ["json", "stream", "gzip", "brotli", "deflate"] }
futures-util = "0.3.31"
async-stream = "0.3.6"
urlencoding = "2.1.3"
portable-pty = "0.9.0"
anyhow = "1.0.100"
libc = "0.2.176"
git2 = "0.19.0"
ignore = "0.4.25"
tempfile = "3.24.0"
uuid = { version = "1.20.0", features = ["v4"] }
url = "2.5.8"
walkdir = "2.5.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
fs2 = "0.4.3"
rusqlite = { version = "0.33.0", features = ["bundled"] }
